--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -16,7 +16,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
     - name: Install app dependencies
-      run: cd movies-app && npm ci
+      run: npm ci
+      working-directory: movies-app
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Setup .env file with mock credentials
