--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "cd movies-app && npm run dev",
-    "build": "cd movies-app && next build",
-    "start": "cd movies-app && next start",
+    "dev": "npm run dev -w movies-app",
+    "build": "npm run build -w movies-app",
+    "start": "npm run start -w movies-app",
     "pretest": "tsc --noEmit && eslint tests/**/*.ts",
     "test": "playwright test",
     "format": "prettier --write tests/**/*"
@@ -20,5 +20,8 @@
     "prettier": "^3.4.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.0"
-  }
+  },
+  "workspaces": [
+    "movies-app"
+  ]
 }
